# Multi-Agent-Research-System

./: .gitignore  README.md  pyproject.toml
app/: config.py
app/api/: routes.py  schemas.py
app/core/: agents.py  tools.py  visualizer.py
frontend/mars-research/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/mars-research/src/: App.tsx  index.css
frontend/mars-research/src/components/: HeroSection.tsx  TopBar.tsx
frontend/mars-research/src/components/input/: ResearchInput.tsx
frontend/mars-research/src/components/pipeline/: AgentPipeline.tsx
frontend/mars-research/src/components/results/: ResearchResults.tsx
frontend/mars-research/src/components/sidebar/: Sidebar.tsx
frontend/mars-research/src/data/: mockData.ts
frontend/mars-research/src/store/: useAppStore.ts
frontend/mars-research/src/types/: index.ts
frontend/mars-research/src/utils/: time.ts
