[project]
name = "ai-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "ddgs>=9.14.4",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.5",
    "matplotlib>=3.10.9",
    "openai>=2.41.1",
    "pandas>=2.3.3",
    "plotly>=6.8.0",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.50",
    "streamlit>=1.58.0",
    "tavily-python>=0.7.26",
    "tiktoken>=0.13.0",
    "uuid-utils>=0.16.1",
    "uvicorn>=0.49.0",
]
